Fix jumps

--- a/components/conf/ticket.module.css
+++ b/components/conf/ticket.module.css
@@ -66,7 +66,7 @@
 }
 
 .ticket-actions-placeholder {
-  height: 75px;
+  height: 85px;
 }
 
 @media (min-width: 1200px) {
